// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MonitorStatusRow component renders status row when status is down 1`] = `
<span>
  <EuiBadge
    color="danger"
  >
    Down
  </EuiBadge>
  <EuiSpacer
    size="s"
  />
  Berlin, Islamabad, London
  <EuiSpacer
    size="xs"
  />
</span>
`;

exports[`MonitorStatusRow component renders status row when status is up 1`] = `
<span>
  <EuiBadge
    color="danger"
  >
    Up
  </EuiBadge>
  <EuiSpacer
    size="s"
  />
  Berlin, Islamabad, London
  <EuiSpacer
    size="xs"
  />
</span>
`;
